--- a/docs/style.css
+++ b/docs/style.css
@@ -5,8 +5,13 @@ td, h1, h2, h3, h4, h5 { line-height: 1.2; }
 pre { overflow: auto; }
 img { display: block; max-width: 100%; }
 ul, ol { padding-left: 1.5em; }
+ul.posts { padding-left: 0em; list-style-type: none; display: table }
+ul.posts li { display: table-row; }
+ul.posts li time { padding-right: 1em; white-space: nowrap; }
+ul.posts li time, ul.posts li a { display: table-cell; padding-bottom: 0.5em; }
 li { margin-bottom: 0.5em; }
 header { border-bottom: thin solid; }
+footer { border-top: thin solid; }
 pre { border: thin solid; padding: 0.5em; line-height: 1.2; }
 
 /* Syntax highlighting */
@@ -15,16 +20,12 @@ pre { border: thin solid; padding: 0.5em; line-height: 1.2; }
 .hl-preprocessor { font-weight: bold; font-style: italic; }
 
 .hl-tag,
-.hl-tag_single,
 .hl-function,
-.hl-function_builtin,
 .hl-heading,
-.hl-label,
-.hl-function_method { font-weight: bold; }
+.hl-label { font-weight: bold; }
 
 .hl-reference,
 .hl-variable,
-.hl-variable_builtin,
 .hl-code,
 .hl-embedded,
 .hl-identifier { font-weight: normal; }
@@ -37,8 +38,7 @@ pre { border: thin solid; padding: 0.5em; line-height: 1.2; }
 .hl-keyword { font-weight: bolder; }
 
 .hl-attribute,
-.hl-constant,
-.hl-constant_builtin { font-weight: normal; }
+.hl-constant { font-weight: normal; }
 
 .hl-bold,
 .hl-italic,
